fixing project badges overlapping on small desktops

--- a/src/features/projects/styles/projectIndex.css
+++ b/src/features/projects/styles/projectIndex.css
@@ -92,8 +92,8 @@
   .project-index .helper-results .results {
     margin-left: var(--filter-offset);
     width: calc(100% - var(--filter-offset));
-    grid-template-columns: 1fr 1fr;
   }
+  
   .project-index .pagination-cont {
     margin: 0 0 0 var(--filter-offset);
     min-height: unset;
